improve igire rwanda system